# heavy

./: .gitignore  Cargo.toml  LICENSE  README.md  smoke-test.sh
src/: access_log.rs  breaker.rs  challenge.rs  config.rs  latency.rs  main.rs  socket.rs  whitelist.rs
src/ml/: features.rs  mod.rs  recorder.rs  train.rs
templates/: challenge.html
tools/whitelists/: generate.py
tools/whitelists/config/: apple.toml  bing.toml  commoncrawl.toml  duckduckgo.toml  google.toml
tools/whitelists/static/: kagibot.toml
web/: challenge.html  worker.js
whitelists/: build.py
whitelists/src/: base.toml  google-common.toml  google-special.toml  google-user-triggered-agents.toml  google-user-triggered-fetchers-google.toml  internet-archive.toml  marginalia.toml  mojeekbot.toml  qwant.toml  wikimedia-citoid.toml  yandex.toml
