[package]
name = "heavy"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy", "http1"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
askama = "0.15"
getrandom = "0.3"
blake3 = "1"
chacha20 = "0.9"
hex = "0.4.3"
regex = "1"
arc-swap = "1.9.1"
rand = "0.10.1"
ipnet = "2.12.0"
prefix-trie = { version = "0.8.2", features = ["ipnet"] }

[dev-dependencies]
insta = "1.47.2"
